{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 0,
  "lineage": "",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "istio-ingress",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "istio-ingress",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "istio-injection": "enabled"
                },
                "name": "istio-ingress",
                "resource_version": "842",
                "uid": "74c57498-fc18-4435-a49b-e59c0de46275"
              }
            ]
          },
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.eks.data.aws_eks_cluster_auth.this",
            "module.eks.module.eks_blueprints.data.aws_iam_policy_document.eks_key",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_cloudwatch_log_group.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_eks_cluster.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_iam_role.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group_rule.cluster",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group_rule.node",
            "module.eks.module.eks_blueprints.module.aws_eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks_blueprints.module.aws_eks.data.aws_partition.current",
            "module.eks.module.eks_blueprints.module.aws_eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.eks_blueprints.module.aws_eks.module.kms.aws_kms_key.this",
            "module.eks.module.eks_blueprints.module.kms.aws_kms_key.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "monitoring",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring",
            "metadata": [
              {
                "generation": 0,
                "name": "monitoring",
                "resource_version": "845",
                "uid": "539579dd-d480-491f-807e-bfc3445b4647"
              }
            ]
          },
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.eks.data.aws_eks_cluster_auth.this",
            "module.eks.module.eks_blueprints.data.aws_iam_policy_document.eks_key",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_cloudwatch_log_group.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_eks_cluster.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_iam_role.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group_rule.cluster",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group_rule.node",
            "module.eks.module.eks_blueprints.module.aws_eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks_blueprints.module.aws_eks.data.aws_partition.current",
            "module.eks.module.eks_blueprints.module.aws_eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.eks_blueprints.module.aws_eks.module.kms.aws_kms_key.this",
            "module.eks.module.eks_blueprints.module.kms.aws_kms_key.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "tracing",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tracing",
            "metadata": [
              {
                "generation": 0,
                "name": "tracing",
                "resource_version": "848",
                "uid": "eccf912f-3f6c-4524-82a9-db4f0e63690a"
              }
            ]
          },
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.eks.data.aws_eks_cluster_auth.this",
            "module.eks.module.eks_blueprints.data.aws_iam_policy_document.eks_key",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_cloudwatch_log_group.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_eks_cluster.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_iam_role.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group_rule.cluster",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group_rule.node",
            "module.eks.module.eks_blueprints.module.aws_eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks_blueprints.module.aws_eks.data.aws_partition.current",
            "module.eks.module.eks_blueprints.module.aws_eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.eks_blueprints.module.aws_eks.module.kms.aws_kms_key.this",
            "module.eks.module.eks_blueprints.module.kms.aws_kms_key.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:431384414715:security-group/sg-0e055c8735fe46c27",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0e055c8735fe46c27",
            "ingress": [],
            "name": "nocnoc-production-cluster-20221222092316172900000002",
            "name_prefix": "nocnoc-production-cluster-",
            "owner_id": "431384414715",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nocnoc-production-cluster"
            },
            "tags_all": {
              "Name": "nocnoc-production-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5f985df3c1b0ebf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:431384414715:security-group/sg-0c54576dac3ffc475",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0c54576dac3ffc475",
            "ingress": [],
            "name": "nocnoc-production-node-20221222092316172900000001",
            "name_prefix": "nocnoc-production-node-",
            "owner_id": "431384414715",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nocnoc-production-node",
              "kubernetes.io/cluster/nocnoc-production": "owned"
            },
            "tags_all": {
              "Name": "nocnoc-production-node",
              "kubernetes.io/cluster/nocnoc-production": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5f985df3c1b0ebf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1782174326",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e055c8735fe46c27",
            "security_group_rule_id": "sgr-0ee4c1bd1ea279a71",
            "self": false,
            "source_security_group_id": "sg-0c54576dac3ffc475",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3968781986",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e055c8735fe46c27",
            "security_group_rule_id": "sgr-052d20407f2b5c4c8",
            "self": false,
            "source_security_group_id": "sg-0c54576dac3ffc475",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2220574192",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e055c8735fe46c27",
            "security_group_rule_id": "sgr-055aff12488e8721a",
            "self": false,
            "source_security_group_id": "sg-0c54576dac3ffc475",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3056313747",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c54576dac3ffc475",
            "security_group_rule_id": "sgr-0f907393c4ce8ebd5",
            "self": false,
            "source_security_group_id": "sg-0e055c8735fe46c27",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-3829046524",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c54576dac3ffc475",
            "security_group_rule_id": "sgr-0240e9ef1d862ae31",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-1004839394",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c54576dac3ffc475",
            "security_group_rule_id": "sgr-0aaa5b7ec7dd04696",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-1165657327",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0c54576dac3ffc475",
            "security_group_rule_id": "sgr-03947f1cc4ab7cffc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-793966316",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c54576dac3ffc475",
            "security_group_rule_id": "sgr-079860ee2b40ee790",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2704635018",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0c54576dac3ffc475",
            "security_group_rule_id": "sgr-0d64d4920d1f5521f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1304577716",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c54576dac3ffc475",
            "security_group_rule_id": "sgr-0203aa62ddcacf1eb",
            "self": false,
            "source_security_group_id": "sg-0e055c8735fe46c27",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2001475830",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c54576dac3ffc475",
            "security_group_rule_id": "sgr-0962f30676c78448f",
            "self": false,
            "source_security_group_id": "sg-0e055c8735fe46c27",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2495894670",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c54576dac3ffc475",
            "security_group_rule_id": "sgr-094a4a640e90084f3",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-815527777",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0c54576dac3ffc475",
            "security_group_rule_id": "sgr-07a59f06fc5cb96e6",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_blueprints_kubernetes_addons.module.argocd[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "this",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "argocd",
            "metadata": [
              {
                "generation": 0,
                "name": "argocd",
                "resource_version": "844",
                "uid": "7d2fa2c3-cfb7-4e76-abc9-6a226981269c"
              }
            ]
          },
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.eks.aws_secretsmanager_secret.arogcd",
            "module.eks.aws_secretsmanager_secret_version.arogcd",
            "module.eks.data.aws_eks_cluster_auth.this",
            "module.eks.data.aws_secretsmanager_secret_version.admin_password_version",
            "module.eks.module.eks_blueprints.data.aws_iam_policy_document.eks_key",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_cloudwatch_log_group.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_eks_cluster.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_iam_role.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group_rule.cluster",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group_rule.node",
            "module.eks.module.eks_blueprints.module.aws_eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks_blueprints.module.aws_eks.data.aws_partition.current",
            "module.eks.module.eks_blueprints.module.aws_eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.eks_blueprints.module.aws_eks.module.kms.aws_kms_key.this",
            "module.eks.module.eks_blueprints.module.kms.aws_kms_key.this",
            "module.eks.random_password.argocd"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks_blueprints_kubernetes_addons.module.aws_cloudwatch_metrics[0].module.helm_addon.module.irsa[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "irsa",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "amazon-cloudwatch",
            "metadata": [
              {
                "generation": 0,
                "name": "amazon-cloudwatch",
                "resource_version": "1383",
                "uid": "b35fc26c-55ac-477f-9e37-8bbd32300b75"
              }
            ],
            "timeouts": {
              "delete": "15m"
            }
          },
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.eks.data.aws_eks_cluster_auth.this",
            "module.eks.module.eks_blueprints.data.aws_iam_policy_document.eks_key",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_cloudwatch_log_group.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_eks_cluster.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_iam_role.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group_rule.cluster",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group_rule.node",
            "module.eks.module.eks_blueprints.module.aws_eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks_blueprints.module.aws_eks.data.aws_partition.current",
            "module.eks.module.eks_blueprints.module.aws_eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.eks_blueprints.module.aws_eks.module.kms.aws_kms_key.this",
            "module.eks.module.eks_blueprints.module.kms.aws_kms_key.this",
            "module.eks.module.eks_blueprints_kubernetes_addons.data.aws_caller_identity.current",
            "module.eks.module.eks_blueprints_kubernetes_addons.data.aws_eks_cluster.eks_cluster",
            "module.eks.module.eks_blueprints_kubernetes_addons.data.aws_partition.current",
            "module.eks.module.eks_blueprints_kubernetes_addons.data.aws_region.current",
            "module.eks.module.eks_blueprints_kubernetes_addons.time_sleep.dataplane"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks_blueprints_kubernetes_addons.module.cert_manager[0].module.helm_addon.module.irsa[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "irsa",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "cert-manager",
            "metadata": [
              {
                "generation": 0,
                "name": "cert-manager",
                "resource_version": "1368",
                "uid": "4afa7dc8-aefe-4df5-8b02-3011315a2d55"
              }
            ],
            "timeouts": {
              "delete": "15m"
            }
          },
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.eks.data.aws_eks_cluster_auth.this",
            "module.eks.module.eks_blueprints.data.aws_iam_policy_document.eks_key",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_cloudwatch_log_group.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_eks_cluster.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_iam_role.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group_rule.cluster",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group_rule.node",
            "module.eks.module.eks_blueprints.module.aws_eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks_blueprints.module.aws_eks.data.aws_partition.current",
            "module.eks.module.eks_blueprints.module.aws_eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.eks_blueprints.module.aws_eks.module.kms.aws_kms_key.this",
            "module.eks.module.eks_blueprints.module.kms.aws_kms_key.this",
            "module.eks.module.eks_blueprints_kubernetes_addons.data.aws_caller_identity.current",
            "module.eks.module.eks_blueprints_kubernetes_addons.data.aws_eks_cluster.eks_cluster",
            "module.eks.module.eks_blueprints_kubernetes_addons.data.aws_partition.current",
            "module.eks.module.eks_blueprints_kubernetes_addons.data.aws_region.current",
            "module.eks.module.eks_blueprints_kubernetes_addons.module.cert_manager.aws_iam_policy.cert_manager",
            "module.eks.module.eks_blueprints_kubernetes_addons.module.cert_manager.data.aws_iam_policy_document.cert_manager_iam_policy_document",
            "module.eks.module.eks_blueprints_kubernetes_addons.time_sleep.dataplane"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks_blueprints_kubernetes_addons.module.kube_prometheus_stack[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "prometheus",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "kube-prometheus-stack",
            "metadata": [
              {
                "generation": 0,
                "name": "kube-prometheus-stack",
                "resource_version": "846",
                "uid": "18ce907b-9bfe-46b1-9282-fec9f89caef8"
              }
            ]
          },
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.eks.data.aws_eks_cluster_auth.this",
            "module.eks.module.eks_blueprints.data.aws_iam_policy_document.eks_key",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_cloudwatch_log_group.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_eks_cluster.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_iam_role.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group_rule.cluster",
            "module.eks.module.eks_blueprints.module.aws_eks.aws_security_group_rule.node",
            "module.eks.module.eks_blueprints.module.aws_eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks_blueprints.module.aws_eks.data.aws_partition.current",
            "module.eks.module.eks_blueprints.module.aws_eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.eks_blueprints.module.aws_eks.module.kms.aws_kms_key.this",
            "module.eks.module.eks_blueprints.module.kms.aws_kms_key.this"
          ]
        }
      ]
    }
  ]
}